--- a/nextcloud-traefik-letsencrypt-docker-swarm.yml
+++ b/nextcloud-traefik-letsencrypt-docker-swarm.yml
@@ -141,6 +141,7 @@ services:
       OVERWRITEPROTOCOL: https
       # Nextcloud URL (replace with yours)
       OVERWRITEHOST: nextcloud.heyvaldemar.net
+      TRUSTED_PROXIES: 172.16.0.0/12 192.168.0.0/16 10.0.0.0/8 fc00::/7 fe80::/10 2001:db8::/32
     networks:
       - nextcloud-network
       - traefik-network
