--- a/nextcloud-traefik-letsencrypt-docker-swarm.yml
+++ b/nextcloud-traefik-letsencrypt-docker-swarm.yml
@@ -181,6 +181,22 @@ services:
     depends_on:
       - postgres
 
+  nextcloud-cron:
+    <<: *default-opts
+    # Image tag (replace with yours)
+    image: nextcloud:24-apache
+    entrypoint: /cron.sh
+    volumes:
+      - nextcloud-data:/var/www/html
+    networks:
+      - nextcloud-network
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
+
   backups:
     <<: *default-opts
     # Image tag (replace with yours)
