--- a/nextcloud-traefik-letsencrypt-docker-swarm.yml
+++ b/nextcloud-traefik-letsencrypt-docker-swarm.yml
@@ -194,6 +194,11 @@ services:
         - "traefik.http.routers.nextcloud.tls.certresolver=letsencrypt"
         - "traefik.http.services.nextcloud.loadbalancer.passhostheader=true"
         - "traefik.http.routers.nextcloud.middlewares=compresstraefik"
+        - "traefik.http.middlewares.sts-headers.headers.stsSeconds=15552000"
+        - "traefik.http.middlewares.sts-headers.headers.stsIncludeSubdomains=True"
+        - "traefik.http.middlewares.dav-discovery.replacepathregex.regex=^/.well-known/(card|cal)dav"
+        - "traefik.http.middlewares.dav-discovery.replacepathregex.replacement=/remote.php/dav/"
+        - "traefik.http.routers.nextcloud.middlewares=sts-headers,dav-discovery"
         - "traefik.http.middlewares.compresstraefik.compress=true"
     depends_on:
       - postgres
