--- a/nextcloud-traefik-letsencrypt-docker-swarm.yml
+++ b/nextcloud-traefik-letsencrypt-docker-swarm.yml
@@ -111,7 +111,7 @@ services:
   postgres:
     <<: *default-opts
     # Image tag (replace with yours)
-    image: postgres:14
+    image: postgres:16
     volumes:
       - nextcloud-postgres:/var/lib/postgresql/data
     environment:
@@ -148,7 +148,7 @@ services:
   nextcloud:
     <<: *default-opts
     # Image tag (replace with yours)
-    image: nextcloud:24-apache
+    image: nextcloud:29
     volumes:
       - nextcloud-data:/var/www/html
     environment:
@@ -226,7 +226,7 @@ services:
   nextcloud-cron:
     <<: *default-opts
     # Image tag (replace with yours)
-    image: nextcloud:24-apache
+    image: nextcloud:29
     entrypoint: /cron.sh
     volumes:
       - nextcloud-data:/var/www/html
@@ -242,7 +242,7 @@ services:
   backups:
     <<: *default-opts
     # Image tag (replace with yours)
-    image: postgres:14
+    image: postgres:16
     # Database backups prune interval (replace with yours). Default is 7 days.
     # find /srv/nextcloud-postgres/backups -type f -mtime +7 | xargs rm -f
 
